Сделал простой интерфейс для калибраторов. Пока на нем работают 9100 и 5522.
Буду внедрять в ТРМ

--- a/ASMC.Devices/ASMC.Devices.csproj
+++ b/ASMC.Devices/ASMC.Devices.csproj
@@ -102,6 +102,7 @@
   <ItemGroup>
     <Compile Include="DeviceInfo.cs" />
     <Compile Include="Helper.cs" />
+    <Compile Include="IEEE\Fluke\Calibrator\Calibr_9100.cs" />
     <Compile Include="IEEE\Fluke\Calibrator\Calib_5522A.cs" />
     <Compile Include="IEEE\Fluke\Calibrator\Calib_5720A.cs" />
     <Compile Include="IEEE\Fluke\Calibrator\ICalibrator.cs" />
