--- a/Plugins/OWEN/TRM202/OWEN_TRM202/OWEN_TRM202.csproj
+++ b/Plugins/OWEN/TRM202/OWEN_TRM202/OWEN_TRM202.csproj
@@ -114,14 +114,14 @@
     <None Include="Resource\TRM_Visual_test.rtf" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resource\TRM202_5522A_OprobovanieResistanceTermocouple_chanel1.jpg" />
-    <Content Include="Resource\TRM202_5522A_OprobovanieResistanceTermocouple_chanel2.jpg" />
-    <Content Include="Resource\TRM202_5522A_TC_out_chanel1.jpg" />
-    <Content Include="Resource\TRM202_5522A_TC_out_chanel2.jpg" />
-    <Content Include="Resource\TRM202_5522A_VoltageTermocouple_chanel1.jpg" />
-    <Content Include="Resource\TRM202_5522A_VoltageTermocouple_chanel2.jpg" />
     <Content Include="Resource\TRM202_P4831_OprobovanieResistanceTermocouple_chanel1.jpg" />
     <Content Include="Resource\TRM202_P4831_OprobovanieResistanceTermocouple_chanel2.jpg" />
+    <Content Include="Resource\TRM202_ResistanceTermocouple_chanel1.jpg" />
+    <Content Include="Resource\TRM202_ResistanceTermocouple_chanel2.jpg" />
+    <Content Include="Resource\TRM202_TC_out_chanel1.jpg" />
+    <Content Include="Resource\TRM202_TC_out_chanel2.jpg" />
+    <Content Include="Resource\TRM202_VoltageTermocouple_chanel1.jpg" />
+    <Content Include="Resource\TRM202_VoltageTermocouple_chanel2.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="View\TermocupleView.xaml">
