Работа идет по плану...

--- a/Plugins/Keysight/E364xAPlugin/E364xAPlugin/E364xAPlugin.csproj
+++ b/Plugins/Keysight/E364xAPlugin/E364xAPlugin/E364xAPlugin.csproj
@@ -62,6 +62,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resource\E364xA_protocol.dotx" />
     <None Include="Resource\E364XA_VisualTest.rtf" />
   </ItemGroup>
   <ItemGroup>
