Делаем абстрактный класс для осциллографов TRM Rohde&Schwarz и думаем над интерфейчом для осциллографов

--- a/ASMC.Devices/ASMC.Devices.csproj
+++ b/ASMC.Devices/ASMC.Devices.csproj
@@ -137,6 +137,8 @@
     <Compile Include="Port\ZipNu4Pribor\Km300P.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rohde_Schwarz\RS_RTM_Oscilloscope.cs" />
+    <Compile Include="Rohde_Schwarz\IOscilloscope.cs" />
     <Compile Include="Sensor.cs" />
     <Compile Include="SimpleScada\IParametrScada.cs" />
     <Compile Include="SimpleScada\IvaSensor.cs" />
