--- a/ASMC.Devices/ASMC.Devices.csproj
+++ b/ASMC.Devices/ASMC.Devices.csproj
@@ -108,6 +108,8 @@
     <Compile Include="IEEE\Fluke\Calibrator\Calib_5522A.cs" />
     <Compile Include="IEEE\Fluke\Calibrator\Calib_5720A.cs" />
     <Compile Include="IEEE\Keysight\Multimeter\BaseDigitalMultimetr344xx.cs" />
+    <Compile Include="IEEE\Keysight\Multimeter\IDigitalMultimetr344xx.cs" />
+    <Compile Include="IEEE\Keysight\Multimeter\KeysightMultimeters.cs" />
     <Compile Include="Interface\IDevice.cs" />
     <Compile Include="Interface\ICalibrator.cs" />
     <Compile Include="IEEE\Fluke\CalibtatorOscilloscope\Calibr_9500B.cs" />
@@ -118,10 +120,10 @@
     <Compile Include="IEEE\Keysight\ElectronicLoad\N3303A.cs" />
     <Compile Include="IEEE\Keysight\ElectronicLoad\N3306A.cs" />
     <Compile Include="IEEE\Keysight\Generator\E8257D.cs" />
-    <Compile Include="IEEE\Keysight\Multimeter\Main_Mult.cs" />
-    <Compile Include="IEEE\Keysight\Multimeter\Mult_34401A.cs" />
-    <Compile Include="IEEE\Keysight\Multimeter\Mult_34460_61A.cs" />
-    <Compile Include="IEEE\Keysight\Multimeter\Mult_34465_70A.cs" />
+    <Compile Include="IEEE\Keysight\Multimeter\oldMult\Main_Mult.cs" />
+    <Compile Include="IEEE\Keysight\Multimeter\oldMult\Mult_34401A.cs" />
+    <Compile Include="IEEE\Keysight\Multimeter\oldMult\Mult_34460_61A.cs" />
+    <Compile Include="IEEE\Keysight\Multimeter\oldMult\Mult_34465_70A.cs" />
     <Compile Include="IEEE\Fluke\Calibrator\CalibrMain.cs" />
     <Compile Include="IEEE\Keysight\NoiseFigureAnalyzer\N8975A.cs" />
     <Compile Include="IEEE\Keysight\PowerSupplyes\E364Xa\E364xA.cs" />
@@ -182,6 +184,10 @@
     <ProjectReference Include="..\AP.Math\AP.Math.csproj">
       <Project>{3b414e92-0ccd-4321-95c6-fe0c71bda0e6}</Project>
       <Name>AP.Math</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AP.Reports\AP.Reports.csproj">
+      <Project>{630eedde-fe14-4ba9-a2da-7976f9bee39a}</Project>
+      <Name>AP.Reports</Name>
     </ProjectReference>
     <ProjectReference Include="..\AP.Utils\AP.Utils.csproj">
       <Project>{ff877f85-43b8-4779-a822-a2904adc1100}</Project>
