--- a/Plugins/Keysight/E364xAPlugin/E364xAPlugin/E364xAPlugin.csproj
+++ b/Plugins/Keysight/E364xAPlugin/E364xAPlugin/E364xAPlugin.csproj
@@ -60,6 +60,10 @@
       <Project>{7208342f-bf11-4241-b032-30f196ce1a6c}</Project>
       <Name>AP.Extension</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\AP.Math\AP.Math.csproj">
+      <Project>{3b414e92-0ccd-4321-95c6-fe0c71bda0e6}</Project>
+      <Name>AP.Math</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\AP.Utils\AP.Utils.csproj">
       <Project>{FF877F85-43B8-4779-A822-A2904ADC1100}</Project>
       <Name>AP.Utils</Name>
