E364xAPlugin добавлено отключение источника питания в случае ошибки программы.
Созданы отдельные процедуры на каждую модель источника питания.

--- a/Plugins/Keysight/E364xAPlugin/E364xAPlugin/E364xAPlugin.csproj
+++ b/Plugins/Keysight/E364xAPlugin/E364xAPlugin/E364xAPlugin.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="E3640A_Plugin.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
