--- a/Plugins/Keysight/E364xAPlugin/E364xAPlugin/E364xAPlugin.csproj
+++ b/Plugins/Keysight/E364xAPlugin/E364xAPlugin/E364xAPlugin.csproj
@@ -52,7 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="E3640A_Plugin.cs" />
+    <Compile Include="BasePowerSupplyProcedure.cs" />
+    <Compile Include="E3640A.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -64,6 +65,10 @@
     <ProjectReference Include="..\..\..\..\AP.Math\AP.Math.csproj">
       <Project>{3b414e92-0ccd-4321-95c6-fe0c71bda0e6}</Project>
       <Name>AP.Math</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\AP.Reports\AP.Reports.csproj">
+      <Project>{630EEDDE-FE14-4BA9-A2DA-7976F9BEE39A}</Project>
+      <Name>AP.Reports</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\AP.Utils\AP.Utils.csproj">
       <Project>{FF877F85-43B8-4779-A822-A2904ADC1100}</Project>
