--- a/Plugins/Keysight/E364xAPlugin/E364xAPlugin/E364xAPlugin.csproj
+++ b/Plugins/Keysight/E364xAPlugin/E364xAPlugin/E364xAPlugin.csproj
@@ -96,6 +96,10 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resource\E364xA_OUTP1_N3300A_34401A.jpg" />
+    <Content Include="Resource\E364xA_OUTP2_N3300A_34401A.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>mkdir "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\" 2&gt; NUL
