--- a/Plugins/Keysight/E364xAPlugin/E364xAPlugin/E364xAPlugin.csproj
+++ b/Plugins/Keysight/E364xAPlugin/E364xAPlugin/E364xAPlugin.csproj
@@ -97,6 +97,7 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resource\E364xA_DefaultSheme.jpg" />
     <Content Include="Resource\E364xA_OUTP1_N3300A_34401A.jpg" />
     <Content Include="Resource\E364xA_OUTP2_N3300A_34401A.jpg" />
   </ItemGroup>
