Вносим изменения в расчет допуска

--- a/ASMC.Devices/ASMC.Devices.csproj
+++ b/ASMC.Devices/ASMC.Devices.csproj
@@ -110,6 +110,8 @@
     <Compile Include="IEEE\Keysight\Multimeter\BaseDigitalMultimetr344xx.cs" />
     <Compile Include="IEEE\Keysight\Multimeter\IDigitalMultimetr344xx.cs" />
     <Compile Include="IEEE\Keysight\Multimeter\KeysightMultimeters.cs" />
+    <Compile Include="IEEE\Keysight\PowerSupplyes\E36XXa\E363xADevices.cs" />
+    <Compile Include="IEEE\Keysight\PowerSupplyes\E36XXa\E364xADevices.cs" />
     <Compile Include="Interface\IDevice.cs" />
     <Compile Include="Interface\ICalibrator.cs" />
     <Compile Include="IEEE\Fluke\CalibtatorOscilloscope\Calibr_9500B.cs" />
@@ -126,7 +128,7 @@
     <Compile Include="IEEE\Keysight\Multimeter\oldMult\Mult_34465_70A.cs" />
     <Compile Include="IEEE\Fluke\Calibrator\CalibrMain.cs" />
     <Compile Include="IEEE\Keysight\NoiseFigureAnalyzer\N8975A.cs" />
-    <Compile Include="IEEE\Keysight\PowerSupplyes\E364Xa\E364xADevice.cs" />
+    <Compile Include="IEEE\Keysight\PowerSupplyes\E36XXa\E36xxA_Device.cs" />
     <Compile Include="IEEE\Keysight\PowerSupplyes\E36XX_IPowerSupply.cs" />
     <Compile Include="IEEE\Tektronix\Oscilloscope\TDS_Oscilloscope.cs" />
     <Compile Include="Interface\IMultimetr.cs" />
