Завершен рефакторинг APPA-107N-109NBasePlugin

--- a/Plugins/APPA/APPA-107N-109N/APPA-107N-109NBasePlugin.csproj
+++ b/Plugins/APPA/APPA-107N-109N/APPA-107N-109NBasePlugin.csproj
@@ -53,7 +53,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="APPA107N.cs" />
     <Compile Include="Appa107N109NBasePlugin.cs" />
+    <Compile Include="Appa109N.cs" />
     <Compile Include="BaseMeasureAppaOperation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -102,4 +104,10 @@
     <Resource Include="Resources\appa_10XN_volt_hz_5522A.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>mkdir "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\" 2&gt; NUL
+mkdir "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\$(TargetName)\Resources\" 2&gt; NUL
+xcopy "$(TargetPath)" "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\$(TargetName)\" /Y
+xcopy "$(ProjectDir)Resources" "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\$(TargetName)\Resources\"/Y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
