рефакторинг TDS TDS_BasePlugin - все плагины в одном проекте
E363xAPlugin сделал пункт МП внешний осмотр

--- a/Plugins/Keysight/E363xAPlugin/E363xAPlugin.csproj
+++ b/Plugins/Keysight/E363xAPlugin/E363xAPlugin.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="BasePowerSupplyProcedure.cs" />
     <Compile Include="Plugin.cs" />
+    <Compile Include="Procedures.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -89,4 +90,10 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>mkdir "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\" 2&gt; NUL
+mkdir "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\$(TargetName)\Resources\" 2&gt; NUL
+xcopy "$(TargetPath)" "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\$(TargetName)\" /Y
+xcopy "$(ProjectDir)Resource" "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\$(TargetName)\Resources\"/Y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
