--- a/Plugins/Keysight/E363xAPlugin/E363xAPlugin.csproj
+++ b/Plugins/Keysight/E363xAPlugin/E363xAPlugin.csproj
@@ -40,6 +40,8 @@
     <Reference Include="NLog">
       <HintPath>..\..\..\packages\NLog.4.7.3\lib\net45\NLog.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,6 +50,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasePowerSupplyProcedure.cs" />
