--- a/ASMC.Core/packages.config
+++ b/ASMC.Core/packages.config
@@ -8,4 +8,5 @@
   <package id="NLog.Config" version="4.7.3" targetFramework="net462" />
   <package id="NLog.Schema" version="4.7.3" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
+  <package id="WindowsAPICodePack" version="1.1.0" targetFramework="net462" />
 </packages>
