Начат рефакторинг операций

--- a/ASMC/ASMC.csproj
+++ b/ASMC/ASMC.csproj
@@ -127,6 +127,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ViewModel\OperationViewModel.cs" />
     <Compile Include="View\Converters\SpecialBooToStringConverter.cs" />
     <Compile Include="Properties\AssemblySettings.cs" />
     <Compile Include="ViewModel\DeviceViewModel.cs" />
