--- a/AP.Extension/AP.Extension.csproj
+++ b/AP.Extension/AP.Extension.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="MeasPointExtension.cs" />
     <Compile Include="IDeviceBaseExtension.cs" />
+    <Compile Include="ObjectExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
