Делаем интерфейс для источников и измерителей физических величин

--- a/ASMC.Data.Model/ASMC.Data.Model.csproj
+++ b/ASMC.Data.Model/ASMC.Data.Model.csproj
@@ -69,6 +69,7 @@
     <Compile Include="MeasurePointAndMeasUtils.cs" />
     <Compile Include="PhysicalQuantity\PhysicalQuantity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RangeStorage.cs" />
     <Compile Include="TreeNode.cs" />
     <Compile Include="UserItemOperation.cs" />
   </ItemGroup>
