--- a/ASMC.Devices/ASMC.Devices.csproj
+++ b/ASMC.Devices/ASMC.Devices.csproj
@@ -107,13 +107,14 @@
     <Compile Include="IEEE\Fluke\Calibrator\Calibr_9100.cs" />
     <Compile Include="IEEE\Fluke\Calibrator\Calib_5522A.cs" />
     <Compile Include="IEEE\Fluke\Calibrator\Calib_5720A.cs" />
+    <Compile Include="IEEE\Fluke\Calibrator\ICalibratorFluke.cs" />
     <Compile Include="IEEE\Keysight\Multimeter\BaseDigitalMultimetr344xx.cs" />
     <Compile Include="IEEE\Keysight\Multimeter\IDigitalMultimetr344xx.cs" />
     <Compile Include="IEEE\Keysight\Multimeter\KeysightMultimeters.cs" />
     <Compile Include="IEEE\Keysight\PowerSupplyes\E36XXa\E363xADevices.cs" />
     <Compile Include="IEEE\Keysight\PowerSupplyes\E36XXa\E364xADevices.cs" />
     <Compile Include="Interface\IDevice.cs" />
-    <Compile Include="Interface\ICalibrator.cs" />
+    <Compile Include="Interface\ICalibratorOld.cs" />
     <Compile Include="IEEE\Fluke\CalibtatorOscilloscope\Calibr_9500B.cs" />
     <Compile Include="HelpDeviceBase.cs" />
     <Compile Include="IEEE\IEEE_Base.cs" />
@@ -189,6 +190,10 @@
     <ProjectReference Include="..\AP.Utils\AP.Utils.csproj">
       <Project>{ff877f85-43b8-4779-a822-a2904adc1100}</Project>
       <Name>AP.Utils</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ASMC.Data.Model\ASMC.Data.Model.csproj">
+      <Project>{F76E5DBB-5041-44C1-9194-6E92AF51B314}</Project>
+      <Name>ASMC.Data.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
