--- a/ASMC.Devices/ASMC.Devices.csproj
+++ b/ASMC.Devices/ASMC.Devices.csproj
@@ -107,15 +107,13 @@
     <Compile Include="IEEE\Fluke\Calibrator\Calibr_9100.cs" />
     <Compile Include="IEEE\Fluke\Calibrator\Calib_5522A.cs" />
     <Compile Include="IEEE\Fluke\Calibrator\Calib_5720A.cs" />
-    <Compile Include="IEEE\Fluke\Calibrator\ICalibratorFluke.cs" />
     <Compile Include="IEEE\Keysight\Multimeter\BaseDigitalMultimetr344xx.cs" />
     <Compile Include="IEEE\Keysight\Multimeter\IDigitalMultimetr344xx.cs" />
     <Compile Include="IEEE\Keysight\Multimeter\KeysightMultimeters.cs" />
     <Compile Include="IEEE\Keysight\PowerSupplyes\E36XXa\E363xADevices.cs" />
     <Compile Include="IEEE\Keysight\PowerSupplyes\E36XXa\E364xADevices.cs" />
-    <Compile Include="Interface\ICalibratorMultimeterFlukeBase.cs" />
+    <Compile Include="IEEE\Fluke\Calibrator\ICalibratorMultimeterFlukeBase.cs" />
     <Compile Include="Interface\IDevice.cs" />
-    <Compile Include="Interface\ICalibratorOld.cs" />
     <Compile Include="IEEE\Fluke\CalibtatorOscilloscope\Calibr_9500B.cs" />
     <Compile Include="HelpDeviceBase.cs" />
     <Compile Include="IEEE\IEEE_Base.cs" />
@@ -134,6 +132,9 @@
     <Compile Include="IEEE\Keysight\PowerSupplyes\E36XX_IPowerSupply.cs" />
     <Compile Include="IEEE\Tektronix\Oscilloscope\TDS_Oscilloscope.cs" />
     <Compile Include="Interface\IMultimetr.cs" />
+    <Compile Include="Interface\SourceAndMeter\IRangePhysicalQuantity.cs" />
+    <Compile Include="Interface\SourceAndMeter\ISource_IMeter.cs" />
+    <Compile Include="Model\RangeDeviceBase.cs" />
     <Compile Include="Port\OWEN\OwenProtocol.cs" />
     <Compile Include="Port\OWEN\TRM202Device.cs" />
     <Compile Include="Port\APPA\Mult_107_109N.cs" />
