--- a/Plugins/Keysight/34401A/Multimetr34401A/packages.config
+++ b/Plugins/Keysight/34401A/Multimetr34401A/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Kelary.Ivi.Visa" version="5.11.3422" targetFramework="net462" />
   <package id="NLog" version="4.7.3" targetFramework="net462" />
 </packages>
