--- a/ASMC.Devices/ASMC.Devices.csproj
+++ b/ASMC.Devices/ASMC.Devices.csproj
@@ -169,7 +169,7 @@
     <None Include="Port\OWEN\ki_parametry_trm202_105_a3.pdf" />
     <None Include="Port\OWEN\opisanie_biblioteki_owenionet.pdf" />
     <None Include="packages.config" />
-    <None Include="Resources\ACC\5522a_1yr_99CF.acc" />
+    <None Include="Resources\ACC\5522.acc" />
     <None Include="Resources\ACC\5700_99.1yr" />
     <None Include="Resources\ACC\9100.acc" />
     <None Include="Resources\ACC\9500.acc" />
@@ -179,6 +179,10 @@
     <Folder Include="IEEE\Fluke\Multimeter\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AP.Extension\AP.Extension.csproj">
+      <Project>{7208342F-BF11-4241-B032-30F196CE1A6C}</Project>
+      <Name>AP.Extension</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AP.Math\AP.Math.csproj">
       <Project>{3b414e92-0ccd-4321-95c6-fe0c71bda0e6}</Project>
       <Name>AP.Math</Name>
