--- a/Plugins/Belvar_V7_40_1/Belvar_V7_40_1.csproj
+++ b/Plugins/Belvar_V7_40_1/Belvar_V7_40_1.csproj
@@ -93,6 +93,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\AP.Extension\AP.Extension.csproj">
+      <Project>{7208342f-bf11-4241-b032-30f196ce1a6c}</Project>
+      <Name>AP.Extension</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\AP.Reports\AP.Reports.csproj">
       <Project>{630EEDDE-FE14-4BA9-A2DA-7976F9BEE39A}</Project>
       <Name>AP.Reports</Name>
