Добавлен аттребут для загрузки измерительных точек TestMeasPointAttribute
Создан метод расширения FillTestPoint для заполнения (не работает)

Исправлен АСС для 34401A, разрешение корректное только для DC

--- a/ASMC.Data.Model/ASMC.Data.Model.csproj
+++ b/ASMC.Data.Model/ASMC.Data.Model.csproj
@@ -70,6 +70,7 @@
     <Compile Include="PhysicalQuantity\PhysicalQuantity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RangeStorage.cs" />
+    <Compile Include="TestMeasPointAttribute.cs" />
     <Compile Include="TreeNode.cs" />
     <Compile Include="UserItemOperation.cs" />
   </ItemGroup>
